initial website setup

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="" class="button-style-none solid-button pad-2r">
                 Installation
               </a>
-              <a href="" class="button-style-none outline-button pad-2r">
+              <a href="#docs.html" class="button-style-none outline-button pad-2r">
                 Documentation
               </a>
             </div>
