--- a/docs.html
+++ b/docs.html
@@ -31,11 +31,11 @@
 
       <div class="side-bar-main">
         <ul class="side-bar-component"><h3>Components</h3>
-          <li class="component-style"><a class="text-style-none" href="#main-avtar-section">Avtar</a></li>
+          <!-- <li class="component-style"><a class="text-style-none" href="#main-avtar-section">Avtar</a></li> -->
           <li class="component-style"><a class="text-style-none" href="#main-alert-section">Alert</a></li>
-          <li class="component-style"><a class="text-style-none" href="">Badge</a></li>
+          <!-- <li class="component-style"><a class="text-style-none" href="">Badge</a></li> -->
           <li class="component-style"><a class="text-style-none" href="">Button</a></li>
-          <li class="component-style"><a class="text-style-none" href="">Card</a></li>
+          <!-- <li class="component-style"><a class="text-style-none" href="">Card</a></li>
           <li class="component-style"><a class="text-style-none" href="">Image</a></li>
           <li class="component-style"><a class="text-style-none" href="">Input</a></li>
           <li class="component-style"><a class="text-style-none" href="">Lists</a></li>
@@ -45,7 +45,7 @@
           <li class="component-style"><a class="text-style-none" href="">Simplified Grid</a></li>
           <li class="component-style"><a class="text-style-none" href="">Slider</a></li>
           <li class="component-style"><a class="text-style-none" href="">Text Utilities</a></li>
-          <li class="component-style"><a class="text-style-none" href="">Toast/Notify</a></li>
+          <li class="component-style"><a class="text-style-none" href="">Toast/Notify</a></li> -->
         </ul>
       </div>
 
