avtar and button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="home-grid-items">
       <nav class="nav-bar-main">
         <div class="nav-pills">
-          <h1>ABCD</h1>
+          <h1><span class="brand-logo">UI</span></h1>
           <h4>Guide</h4>
           <h4>Component</h4>
         </div>
@@ -38,7 +38,7 @@
               <a href="" class="button-style-none solid-button pad-2r">
                 Installation
               </a>
-              <a href="#docs.html" class="button-style-none outline-button pad-2r">
+              <a href="docs.html" class="button-style-none outline-button pad-2r">
                 Documentation
               </a>
             </div>
