did the requested changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="home-image-section">
             <img
               src="images/undraw_proud_coder_re_exuy (2).svg"
-              alt=""
+              alt="profile-home-image-svg"
               class="home-image img-responsive"
             />
           </div>
