added card, image & input

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
           </div>
         </div>
       </section>
+      <footer class="footer-main">
+        <div class="copy-right">
+          <i class="fal fa-copyright"></i> 2022 UI Inc. All rights reserved.
+        </div>
+        <div class="icon-container">
+          <a class="footer-icon" href=""><i class="fab fa-github"></i></a>
+          <a class="footer-icon" href=""><i class="fab fa-twitter"></i></a>
+          <a class="footer-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+      </footer>
     </div>
   </body>
 </html>
