--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <nav class="nav-bar-main">
         <div class="nav-pills">
           <h1><span class="brand-logo">UI</span></h1>
-          <h4>Guide</h4>
-          <h4>Component</h4>
+          <h4 class="nav-button"><a href="docs.html" class="text-style-none">Component</a></h4>
         </div>
         <div class="contact-links">
           <i class="fab fa-github"></i>
