--- a/docs.html
+++ b/docs.html
@@ -642,6 +642,42 @@
 </iframe>
           </div>
         </section>
+
+        <section class="section-component" id="navbar">
+          <h1>Navbar</h1>
+          <p class="intro-font-weight">
+            Navigation bar is used to navigate through the web apps or websites. This navigation component is responsive. It is a hamburger menu in medium and small devices.
+          </p>
+            <nav class="navbar box-shadow">
+              <div class="brand-name">
+                <a class="text-style-none font-lg" href="./index.html"><h4>smasher</h4></a>
+              </div>
+              <div class="searchbar">
+                <i class="fal fa-search searchbar-style"></i>
+                <input class="inputbox-style" type="text" placeholder="Search item...">
+              </div>
+              <div class="cta-button">
+                <div class="icon-label-container">
+                  <a href=""><i class="far fa-user-alt"></i></a>
+                  <span class="icon-label">profile</span>
+                </div>
+                <div class="icon-label-container">
+                  <a href=""><i class="far fa-heart"></i></a>
+                  <span class="icon-label">wishlist</span>
+                </div>
+                <div class="icon-label-container">
+                  <a href=""><i class="far fa-shopping-bag"></i></a>
+                  <span class="icon-label">cart</span>
+                </div>
+              </div>
+            </nav>
+            <div class="code-snippet">
+              <iframe
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cnav%2520class%253D%2522navbar%2520box-shadow%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522brand-name%2522%253E%250A%2520%2520%2520%2520%253Ca%2520class%253D%2522text-style-none%2520font-lg%2522%2520href%253D%2522.%252Findex.html%2522%253E%253Ch4%253Esmasher%253C%252Fh4%253E%253C%252Fa%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522searchbar%2522%253E%250A%2520%2520%2520%2520%253Ci%2520class%253D%2522fal%2520fa-search%2520searchbar-style%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%253Cinput%2520class%253D%2522inputbox-style%2522%2520type%253D%2522text%2522%2520placeholder%253D%2522Search%2520item...%2522%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522cta-button%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-user-alt%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522icon-label%2522%253Eprofile%253C%252Fspan%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522icon-label%2522%253Ewishlist%253C%252Fspan%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-shopping-bag%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522icon-label%2522%253Ecart%253C%252Fspan%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fnav%253E"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
+            </div>
+        </section>
         <!-- <span style="white-space:nowrap;color:#5f5f5f;opacity:.36;">________________________________________________________________________________</span> -->
       </div>    
       <footer class="footer-main">
