fix: layout-issues

--- a/docs.html
+++ b/docs.html
@@ -51,7 +51,7 @@
           <li class="component-style"><a class="text-style-none" href="#input">Input</a></li>
           <!-- <li class="component-style"><a class="text-style-none" href="">Lists</a></li> -->
           <!-- <li class="component-style"><a class="text-style-none" href="">Modal</a></li> -->
-          <!-- <li class="component-style"><a class="text-style-none" href="">Navigation</a></li> -->
+          <li class="component-style"><a class="text-style-none" href="#navbar">Navbar</a></li>
           <li class="component-style"><a class="text-style-none" href="#rating">Rating</a></li>
           <!-- <li class="component-style"><a class="text-style-none" href="">Simplified Grid</a></li> -->
           <!-- <li class="component-style"><a class="text-style-none" href="">Slider</a></li> -->
@@ -653,21 +653,23 @@
                 <a class="text-style-none font-lg" href="./index.html"><h4>smasher</h4></a>
               </div>
               <div class="searchbar">
-                <i class="fal fa-search searchbar-style"></i>
                 <input class="inputbox-style" type="text" placeholder="Search item...">
+                <button><i class="fal fa-search searchbar-style"></i></button>
               </div>
               <div class="cta-button">
-                <div class="icon-label-container">
-                  <a href=""><i class="far fa-user-alt"></i></a>
-                  <span class="icon-label">profile</span>
-                </div>
+                <button class="button-style-none solid-button">
+                  Login
+                </button>
+              
                 <div class="icon-label-container">
                   <a href=""><i class="far fa-heart"></i></a>
-                  <span class="icon-label">wishlist</span>
+                  <!-- <span class="icon-label">wishlist</span> -->
+                  <div class="badge badge-icon-card">6</div>
                 </div>
                 <div class="icon-label-container">
                   <a href=""><i class="far fa-shopping-bag"></i></a>
-                  <span class="icon-label">cart</span>
+                  <!-- <span class="icon-label">cart</span> -->
+                  <div class="badge badge-icon-card">6</div>
                 </div>
               </div>
             </nav>
