--- a/docs.html
+++ b/docs.html
@@ -663,22 +663,49 @@
               
                 <div class="icon-label-container">
                   <a href=""><i class="far fa-heart"></i></a>
-                  <!-- <span class="icon-label">wishlist</span> -->
                   <div class="badge badge-icon-card">6</div>
                 </div>
+
                 <div class="icon-label-container">
                   <a href=""><i class="far fa-shopping-bag"></i></a>
                   <!-- <span class="icon-label">cart</span> -->
                   <div class="badge badge-icon-card">6</div>
                 </div>
+
               </div>
             </nav>
             <div class="code-snippet">
               <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cnav%2520class%253D%2522navbar%2520box-shadow%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522brand-name%2522%253E%250A%2520%2520%2520%2520%253Ca%2520class%253D%2522text-style-none%2520font-lg%2522%2520href%253D%2522.%252Findex.html%2522%253E%253Ch4%253Esmasher%253C%252Fh4%253E%253C%252Fa%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522searchbar%2522%253E%250A%2520%2520%2520%2520%253Ci%2520class%253D%2522fal%2520fa-search%2520searchbar-style%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%253Cinput%2520class%253D%2522inputbox-style%2522%2520type%253D%2522text%2522%2520placeholder%253D%2522Search%2520item...%2522%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522cta-button%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-user-alt%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522icon-label%2522%253Eprofile%253C%252Fspan%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522icon-label%2522%253Ewishlist%253C%252Fspan%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-shopping-bag%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522icon-label%2522%253Ecart%253C%252Fspan%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fnav%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cnav%2520class%253D%2522navbar%2520box-shadow%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522brand-name%2522%253E%250A%2520%2520%2520%2520%253Ca%2520class%253D%2522text-style-none%2520font-lg%2522%2520href%253D%2522.%252Findex.html%2522%253E%253Ch4%253Esmasher%253C%252Fh4%253E%253C%252Fa%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522searchbar%2522%253E%250A%2520%2520%2520%2520%253Cinput%2520class%253D%2522inputbox-style%2522%2520type%253D%2522text%2522%2520placeholder%253D%2522Search%2520item...%2522%253E%250A%2520%2520%2520%2520%253Cbutton%253E%253Ci%2520class%253D%2522fal%2520fa-search%2520searchbar-style%2522%253E%253C%252Fi%253E%253C%252Fbutton%253E%250A%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%253Cdiv%2520class%253D%2522cta-button%2522%253E%250A%2520%2520%2520%2520%253Cbutton%2520class%253D%2522button-style-none%2520solid-button%2522%253E%250A%2520%2520%2520%2520%2520%2520Login%250A%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522badge%2520badge-icon-card%2522%253E6%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522icon-label-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2522%253E%253Ci%2520class%253D%2522far%2520fa-shopping-bag%2522%253E%253C%252Fi%253E%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522badge%2520badge-icon-card%2522%253E6%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fnav%253E"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
             </div>
+        </section>
+
+        <section class="section-component" id="slider">
+          <h1>Slider</h1>
+          <p class="intro-font-weight">
+            Sliders are used to decide range for something like sound in videos, price in shopping sites, etc.
+          </p>
+          <h3>Example of slider</h3>
+          <div class="component-outputs">
+            <div class="slider-container">
+              <div class="slider-tag">
+                <span class="slider-tag-value">0</span>
+                <span class="slider-tag-value">50</span>
+                <span class="slider-tag-value">100</span>
+              </div>
+              <div>
+                <input type="range" min="1" max="100" value="100" class="slider-style">
+              </div>
+            </div>
+          </div>
+          <div class="code-snippet">
+            <iframe
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522slider-container%2522%253E%250A%2520%2520%253Cdiv%2520class%253D%2522slider-tag%2522%253E%250A%2520%2520%2520%2520%253Cspan%2520class%253D%2522slider-tag-value%2522%253E0%253C%252Fspan%253E%250A%2520%2520%2520%2520%253Cspan%2520class%253D%2522slider-tag-value%2522%253E50%253C%252Fspan%253E%250A%2520%2520%2520%2520%253Cspan%2520class%253D%2522slider-tag-value%2522%253E100%253C%252Fspan%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%253E%250A%2520%2520%2520%2520%253Cinput%2520type%253D%2522range%2522%2520min%253D%25220%2522%2520max%253D%2522100%2522%2520class%253D%2522slider-style%2522%253E%250A%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
+          </div>
         </section>
         <!-- <span style="white-space:nowrap;color:#5f5f5f;opacity:.36;">________________________________________________________________________________</span> -->
       </div>    
