--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
       crossorigin="anonymous"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Simple-UI | HOME</title>
   </head>
   <body>
     <div class="home-grid-items">
       <nav class="nav-bar-main">
         <div class="nav-pills">
-          <h1><span class="brand-logo">UI</span></h1>
-          <h4 class="nav-button"><a href="docs.html" class="text-style-none">Component</a></h4>
+          <h1><span class="brand-logo">SIMPLE UI</span></h1>
         </div>
         <div class="contact-links">
-          <i class="fab fa-github"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-linkedin-in"></i>
+          <a href="https://github.com/Shailseen" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/Shailes62273951" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/shailesh-kumar-840b28220/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </nav>
       <section>
@@ -51,14 +50,28 @@
           </div>
         </div>
       </section>
+      <section class="installation-container">
+        <div class="installation-guide">
+        <h2>Installation</h2>
+        <p class="intro-font-weight">
+          Copy and paste the code in the head tag of your html document. So that you can style your components by just adding class names to your html elements.
+        </p>
+      </div>
+      </section>
+      <div class="code-snippet">
+        <iframe
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fsimple-ui-component.netlify.app%252Fstyle.css%2522%252F%253E"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
+      </div>
       <footer class="footer-main">
         <div class="copy-right">
           <i class="fal fa-copyright"></i> 2022 UI Inc. All rights reserved.
         </div>
         <div class="icon-container">
-          <a class="footer-icon" href=""><i class="fab fa-github"></i></a>
-          <a class="footer-icon" href=""><i class="fab fa-twitter"></i></a>
-          <a class="footer-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+          <a class="footer-icon" href="https://github.com/Shailseen" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="footer-icon" href="https://twitter.com/Shailes62273951" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a class="footer-icon" href="https://www.linkedin.com/in/shailesh-kumar-840b28220/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
       </footer>
     </div>
   </body>
