style: fix designs

--- a/docs.html
+++ b/docs.html
@@ -22,7 +22,7 @@
       <nav class="nav-bar-main">
         <div class="hamburger-menu"><i class="fas fa-bars"></i></div>
         <div class="nav-pills">
-          <span class="brand-logo hide-logo">SIMPLE UI</span>
+          <a class="brand-logo hide-logo" href="./index.html"><span class="brand-first-logo">set</span>CSS</a>
           <h4 class="nav-button"><a href="index.html" class="text-style-none liink-home-button">HOME</a></h4>
         </div>
         <div class="contact-links">
@@ -56,7 +56,7 @@
           <li class="component-style"><a class="text-style-none" href="#text-util">Text Utilities</a></li>
           <li class="component-style"><a class="text-style-none" href="#list">Lists</a></li>
           <li class="component-style"><a class="text-style-none" href="#grid">Grid</a></li>
-          <li class="component-style"><a class="text-style-none" href="#Toast">Toast</a></li>
+          <li class="component-style"><a class="text-style-none" href="#toast">Toast</a></li>
           <li class="component-style"><a class="text-style-none" href="#Modal">Modal</a></li>
         </ul>
       </aside>
@@ -85,7 +85,7 @@
           <li class="component-style-mobile"><a class="text-style-none" href="#text-util">Text Utilities</a></li>
           <li class="component-style-mobile"><a class="text-style-none" href="#list">Lists</a></li>
           <li class="component-style-mobile"><a class="text-style-none" href="#grid">Grid</a></li>
-          <li class="component-style-mobile"><a class="text-style-none" href="#Toast">Toast</a></li>
+          <li class="component-style-mobile"><a class="text-style-none" href="#toast">Toast</a></li>
           <li class="component-style-mobile"><a class="text-style-none" href="#Modal">Modal</a></li>
         </ul>
         <div class="close-side-bar" id="close-button-side-bar"><i class="fal fa-times"></i></div>
@@ -99,7 +99,7 @@
         <!-- alerts section -->
         <section id="alert" class="section-component">
           <div class="component-intro">
-            <h1>ALERT</h1>
+            <p class="component-header">ALERT</p>
             <p class="intro-font-weight">
               Alert messages can be used to notify the user about something
               special: danger, success, information or warning.
@@ -156,7 +156,7 @@
         <!-- avatar section -->
         <section class="section-component" id="avatar">
           <div class="component-intro">
-            <h1>Avatar</h1>
+            <p class="component-header">Avatar</p>
             <p class="intro-font-weight">
               Avatar can be used to show user's profile picture on profile
               information page, on navigation bar, in blogs grid items.
@@ -224,7 +224,7 @@
 
         <section id="badge" class="section-component">
           <div class="component-intro">
-            <h1>Badge</h1>
+            <p class="component-header">Badge</p>
             <p class="intro-font-weight">
               Badge is use for to represent status of a person offline or online
               and also for number of notification you have.
@@ -309,7 +309,7 @@
 
         <section class="section-component" id="button">
           <div class="component-intro">
-            <h1>Button</h1>
+            <p class="component-header">Button</p>
             <p class="intro-font-weight">
               Button are used for some action you have to perform on the page.
               These are used in forms, login window, etc. various type of button
@@ -388,7 +388,7 @@
       <!-- card -->
       <section class="section-component" id="card">
         <div class="component-intro">
-          <h1>Card</h1>
+          <p class="component-header">Card</p>
           <p class="intro-font-weight">
            Card are used to show user related data collectively, like product details.
           </p>
@@ -514,7 +514,7 @@
 
       <!-- images -->
       <section class="section-component" id="image">
-        <h1>Responsive Image</h1>
+        <p class="component-header">Responsive Image</p>
         <p class="font-intro-weight">
           A responsive image will automatically adjust for different screen sizes and viewports.
         </p>
@@ -539,7 +539,7 @@
       <!-- Input -->
 
       <section class="section-component" id="input">
-        <h1>Input textbox</h1>
+        <p class="component-header">Input textbox</p>
         <p class="intro-font-weight">
           Text box is used for to enter a para from user in a form.
         </p>
@@ -578,7 +578,7 @@
         </section>
 
         <section class="section-component" id="rating">
-          <h1>Rating</h1>
+          <p class="component-header">Rating</p>
           <p class="intro-font-weight">
             Rating is used for taking feedback from users.
           </p>
@@ -600,7 +600,7 @@
         </section>
 
         <section class="section-component" id="text-util">
-          <h1>Text utility</h1>
+          <p class="component-header">Text utility</p>
           <p class="intro-font-weight">
             Examples for common text utilities to control text alignment, heading, weight, and more.
           </p>
@@ -654,7 +654,7 @@
         </section>
 
         <section class="section-component" id="navbar">
-          <h1>Navbar</h1>
+          <p class="component-header">Navbar</p>
           <p class="intro-font-weight">
             Navigation bar is used to navigate through the web apps or websites. This navigation component is responsive. It is a hamburger menu in medium and small devices.
           </p>
@@ -693,7 +693,7 @@
         </section>
 
         <section class="section-component" id="slider">
-          <h1>Slider</h1>
+          <p class="component-header">Slider</p>
           <p class="intro-font-weight">
             Sliders are used to decide range for something like sound in videos, price in shopping sites, etc.
           </p>
@@ -719,7 +719,7 @@
         </section>
 
         <section class="section-component" id="list">
-          <h1>Lists</h1>
+          <p class="component-header">Lists</p>
           <p class="intro-font-weight">
             Lists can be used at so many places, navigation bar, aside bar, articles etc.
           </p>
@@ -822,7 +822,7 @@
         </section>
 
         <section class="section-component" id="grid">
-          <h1>Grid</h1>
+          <p class="component-header">Grid</p>
           <p class="intro-font-weight">
             Use grid when you want sections in view. Check below some examples of side by side cards.
           </p>
@@ -897,7 +897,7 @@
         </section>
         
         <section class="section-component" id="toast">
-          <h1>Toast</h1>
+          <p class="component-header">Toast</p>
           <p class="intro-font-weight">
             This component can be used for toast or snackbar component. Toast is mostly used to show feedback message.
           </p>
@@ -947,15 +947,17 @@
         </section>
 
         <section class="section-component" id="Modal">
-          <h1>Modal</h1>
+          <p class="component-header">Modal</p>
           <p class="intro-font-weight">
             Modals are positioned over everything else in the document and remove scroll from the page. It gets closed only with close button on modal pop-up.
           </p>
           <h3>Example of Modal</h3>
           <div class="component-outputs">
             <div class="modal-container">
+              <div class="modal-items">
               <h4>Modal pop-up container</h4>
               <button class="button-style-none solid-button">Go back</button>
+            </div>
             </div>
           </div>
 
@@ -967,8 +969,10 @@
           </div>
           <h3>Live Modal</h3>
           <div class="modal-container" id="example-modal-interstitial">
+            <div class="modal-items">
             <h4>Modal pop-up container</h4>
             <button class="button-style-none solid-button" id="example-modal-close">Go back</button>
+          </div>
           </div>
           <div class="component-outputs">
             <button class="button-style-none solid-button" id="example-modal-CTA">Show Modal</button>
