--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="home-grid-items">
       <nav class="nav-bar-main">
         <div class="nav-pills">
-          <h1><span class="brand-logo">SIMPLE UI</span></h1>
+          <a class="brand-logo" href="./index.html"><span class="brand-first-logo">set</span>CSS</a>
         </div>
         <div class="contact-links">
           <a href="https://github.com/Shailseen" target="_blank"><i class="fab fa-github"></i></a>
@@ -25,12 +25,12 @@
           <a href="https://www.linkedin.com/in/shailesh-kumar-840b28220/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </nav>
-      <section>
-        <div class="home-50-50-grid">
+
+      <section class="home-50-50-grid">
           <div class="home-text-section">
-            <h1>Make Your UI Instant</h1>
+            <p class="home-header">Make Your UI Instant</p>
             <p class="intro-font-weight">
-              Simply copy component code and build your UI faster.
+              Simply copy component code and build your UI faster. Without wasting your time in the UI.
             </p>
             <div class="home-button-wrap">
               <a href="" class="button-style-none solid-button pad-2r">
@@ -48,8 +48,8 @@
               class="home-image img-responsive"
             />
           </div>
-        </div>
       </section>
+
       <section class="installation-container">
         <div class="installation-guide">
         <h2>Installation</h2>
@@ -57,13 +57,14 @@
           Copy and paste the code in the head tag of your html document. So that you can style your components by just adding class names to your html elements.
         </p>
       </div>
-      </section>
       <div class="code-snippet">
         <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fsimple-ui-component.netlify.app%252Fstyle.css%2522%252F%253E"
-  sandbox="allow-scripts allow-same-origin">
-</iframe>
-      </div>
+        src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=sharp&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fsimple-ui-component.netlify.app%252Fstyle.css%2522%252F%253E"
+        sandbox="allow-scripts allow-same-origin">
+      </iframe>
+    </div>
+  </section>
+
       <footer class="footer-main">
         <div class="copy-right">
           <i class="fal fa-copyright"></i> 2022 UI Inc. All rights reserved.
