--- a/docs.html
+++ b/docs.html
@@ -31,6 +31,7 @@
           <a href="https://www.linkedin.com/in/shailesh-kumar-840b28220/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </nav>
+      <div id="progress-bar"></div>
 
       <aside class="side-bar-main" id="side-bar">
         <ul class="side-bar-component">
